syntax = "proto3";

package game;

option go_package = "./game";

enum MsgType {
    MSG_TYPE_UNSPECIFIED = 0;
    MSG_TYPE_CLIENT = 1;
    MSG_TYPE_SVR = 2;
}

message MsgHead {
    string uid = 1;
    string cmd = 2;
    string seq = 3;  // 请求带上的seq

    // 返回码
    int32 code = 4;
    string msg = 5;

    // 路由信息
    MsgType  type = 6; // 消息类型: 1. 返回客户端 2. 请求服务端
    string s_id = 7; //服务id
    string i_id = 8; //实例id
    string c_id = 9; //客户端id
}

// 消息
message Msg {
    MsgHead head = 1;
    bytes data = 2;
}
